--- a/SpringBoot03/bin/templates/layout/main.html
+++ b/SpringBoot03/bin/templates/layout/main.html
@@ -10,20 +10,22 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Home :: BDCBook</title>
+    <title layout:title-pattern="$CONTENT_TITLE $DECORATOR_TITLE"> :: BDCBook</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="webjars/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet"
+    	href="webjars/bootstrap/3.3.1/css/bootstrap.min.css"
+    	th:href="@{/webjars/bootstrap/3.3.1/css/bootstrap.min.css}" />
 
 
-    <!-- Custom styles for this template -->
-    <link href="css/carousel.css" rel="stylesheet" />
+ 
   </head>
 <!-- NAVBAR
 ================================================== -->
   <body>
     <div class="navbar-wrapper">
       <div class="container">
+
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div class="navbar-header">
@@ -64,22 +66,23 @@
 		<!--  Page content goes here -->
 	</div>
  
+ 
+ 	<script src="webjars/jquery/1.11.1/jquery.min.js"
+		th:src="@{webjars/jquery/1.11.1/jquery.min.js}"></script>
+	<script src="webjars/bootstrap/3.3.1/js/bootstrap.min.js"
+		th:src="@{webjars/bootstrap/3.3.1/js/bootstrap.min.js}"></script>
+
+	<div layout:fragment="custom-scripts">
+		<!-- Custom page specific scripts go here -->
+	</div>
 
       <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <footer class="container">
+        <p>&copy; 2017 Shantanu &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/docs.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+ 
   </body>
 </html>
