--- a/SpringBoot04/src/main/resources/templates/home.html
+++ b/SpringBoot04/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	xmlns:th="http://www.thymeleaf.org"
-	layout:decorator="layout/main">
+	layout:decorator="layouts/main">
 
 <head>
     <title>Home</title>
