--- a/SpringBoot04/src/main/resources/templates/layouts/main.html
+++ b/SpringBoot04/src/main/resources/templates/layouts/main.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title layout:title-pattern="$CONTENT_TITLE $DECORATOR_TITLE"> :: BDCBook</title>
+    <title layout:title-pattern="$CONTENT_TITLE $DECORATOR_TITLE"> :: Test</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet"
